--- a/Profile_Raynda/Polban.html
+++ b/Profile_Raynda/Polban.html
@@ -177,18 +177,17 @@ https://templatemo.com/tm-567-nomad-force
 
         </main>
 
-        <footer class="site-footer">
+       <footer class="site-footer">
             <div class="container">
                 <div class="row">
 
                     <div class="col-12">
                         <h5 class="text-white">
                             <i class="bi-geo-alt-fill me-2"></i>
-                            State of Rio de Janeiro, Brazil
-                        </h5>
+                            Tabuci, Leuwigajah, Cimahi Selatan, Cimahi                       </h5>
 
-                        <a href="mailto:info@company.com" class="custom-link mt-3 mb-5">
-                            info@company.com
+                        <a href="mailto:raynda.bayu.toi22@polban.ac.id" class="custom-link mt-3 mb-5">
+                            raynda.bayu.toi22@polban.ac.id
                         </a>
                     </div>
 
@@ -201,15 +200,13 @@ https://templatemo.com/tm-567-nomad-force
 
                     <div class="col-lg-3 col-5 ms-auto">
                         <ul class="social-icon">
-                            <li><a href="#" class="social-icon-link bi-facebook"></a></li>
+                            <li><a href="https://www.facebook.com/raynda.agustia?mibextid=4MzKDw5ooBP2efJs" class="social-icon-link bi-facebook"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-twitter"></a></li>
+                            <li><a href="https://wa.me/6281383754675" class="social-icon-link bi-whatsapp"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+                            <li><a href="https://www.instagram.com/boyagustia/profilecard/?igsh=b2VjbnpiNTRha3Zz" class="social-icon-link bi-instagram"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-
-                            <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                            <li><a href="https://youtube.com/@rayndabayusriagustia8498?si=yCClKRfHRkzdTHXP" class="social-icon-link bi-youtube"></a></li>
                         </ul>
                     </div>
 
